--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -218,6 +218,15 @@ a{color:inherit;text-decoration:none}
         mail: document.querySelector("#RegEmail").value,
         password: document.querySelector("#RegPass1").value
     }
-    console.log(newUser)
+    let requestOptions = {
+        method: 'POST',
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify(newUser)
+    };
+
+    fetch("http://todo-api-team2.mybluemix.net/api/users", requestOptions)
+        .then(response => response.text())
+        .then(result => console.log(result))
+        .catch(error => console.log('error', error));
 })
 </script>
