delete, and buttons

--- a/public/tasks.css
+++ b/public/tasks.css
@@ -6,7 +6,7 @@ body {
     line-height: 1.5;
     color: #495057;
     text-align: left;
-    background-color: #6200EA;
+    background-color: #646b83;
 }
 
 i {
