--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -2,180 +2,93 @@
   <div class="col-md-8">
     <div class="card-hover-shadow-2x mb-3 card">
       <div class="card-header-tab card-header">
-        <div class="card-header-title font-size-lg text-capitalize font-weight-normal"><i
-            class="fa fa-tasks"></i>&nbsp;Task Lists</div>
-
+        <div class="card-header-title font-size-lg text-capitalize font-weight-normal">
+            <i class="fa fa-tasks"></i>&nbsp;Task Lists
+        </div>
       </div>
       <div class="scroll-area-sm">
         <perfect-scrollbar class="ps-show-limits">
           <div style="position: static;" class="ps ps--active-y">
             <div class="ps-content">
               <ul class=" list-group list-group-flush">
-                <li class="list-group-item">
-                  <div class="todo-indicator bg-warning"></div>
-                  <div class="widget-content p-0">
-                    <div class="widget-content-wrapper">
-                      <div class="widget-content-left mr-2">
-                        <div class="custom-checkbox custom-control">
-                          <input class="custom-control-input" id="exampleCustomCheckbox12" type="checkbox"><label
-                            class="custom-control-label" for="exampleCustomCheckbox12">&nbsp;</label>
-                        </div>
-                      </div>
-                      <div class="widget-content-left">
-                        <div class="widget-heading">Call Sam For payments <div class="badge badge-danger ml-2">Rejected
-                          </div>
-                        </div>
-                        <div class="widget-subheading"><i>By Bob</i></div>
-                      </div>
-                      <div class="widget-content-right">
-                        <button class="border-0 btn-transition btn btn-outline-success">
-                          <i class="fa fa-check"></i></button>
-                        <button class="border-0 btn-transition btn btn-outline-danger">
-                          <i class="fa fa-trash"></i>
-
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="todo-indicator bg-focus"></div>
-                  <div class="widget-content p-0">
-                    <div class="widget-content-wrapper">
-                      <div class="widget-content-left mr-2">
-                        <div class="custom-checkbox custom-control"><input class="custom-control-input"
-                            id="exampleCustomCheckbox1" type="checkbox"><label class="custom-control-label"
-                            for="exampleCustomCheckbox1">&nbsp;</label></div>
-                      </div>
-                      <div class="widget-content-left">
-                        <div class="widget-heading">Make payment to Bluedart</div>
-                        <div class="widget-subheading">
-                          <div>By Johnny <div class="badge badge-pill badge-info ml-2">NEW</div>
-                          </div>
-
-                        </div>
-
-                      </div>
-                      <div class="widget-content-right">
-                        <button class="border-0 btn-transition btn btn-outline-success">
-                          <i class="fa fa-check"></i></button>
-                        <button class="border-0 btn-transition btn btn-outline-danger">
-                          <i class="fa fa-trash"></i>
-
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
+                {{#each tasks}}
                 <li class="list-group-item">
                   <div class="todo-indicator bg-primary"></div>
                   <div class="widget-content p-0">
                     <div class="widget-content-wrapper">
                       <div class="widget-content-left mr-2">
-                        <div class="custom-checkbox custom-control"><input class="custom-control-input"
-                            id="exampleCustomCheckbox4" type="checkbox"><label class="custom-control-label"
-                            for="exampleCustomCheckbox4">&nbsp;</label></div>
+                        <div class="custom-checkbox custom-control">
+                          <input class="custom-control-input" id="checkbox{{@index}}" type="checkbox">
+                          <label class="custom-control-label" for="checkbox{{@index}}">&nbsp;</label>
+                        </div>
                       </div>
                       <div class="widget-content-left flex2">
-                        <div class="widget-heading">Office rent </div>
-                        <div class="widget-subheading">By Samino!</div>
+                        <div class="widget-heading">{{this.title}}</div>
+                        <div class="widget-subheading">{{this.text}}</div>
                       </div>
-
                       <div class="widget-content-right">
-                        <button class="border-0 btn-transition btn btn-outline-success">
-                          <i class="fa fa-check"></i></button>
-                        <button class="border-0 btn-transition btn btn-outline-danger">
+                        <button id="priorityUp"  class="border-0 btn-transition btn btn-outline-secondary">
+                          <i class="fa-solid fa-arrow-up"></i>
+                        </button>
+                        <button id="priorityDown"  class="border-0 btn-transition btn btn-outline-secondary">
+                          <i class="fa-solid fa-arrow-down"></i>
+                        </button>
+                        <button class="border-0 btn-transition btn btn-outline-primary">
+                          <i class="fa-solid fa-ellipsis" style="color: black;"></i>
+                        </button>
+                        <button id="delete{{@index}}" onclick="deleteTask('{{this._id}}')" class="border-0 btn-transition btn btn-outline-danger">
                           <i class="fa fa-trash"></i>
-
                         </button>
                       </div>
                     </div>
                   </div>
                 </li>
-                <li class="list-group-item">
-                  <div class="todo-indicator bg-info"></div>
-                  <div class="widget-content p-0">
-                    <div class="widget-content-wrapper">
-                      <div class="widget-content-left mr-2">
-                        <div class="custom-checkbox custom-control"><input class="custom-control-input"
-                            id="exampleCustomCheckbox2" type="checkbox"><label class="custom-control-label"
-                            for="exampleCustomCheckbox2">&nbsp;</label></div>
-                      </div>
-
-                      <div class="widget-content-left">
-                        <div class="widget-heading">Office grocery shopping</div>
-                        <div class="widget-subheading">By Tida</div>
-                      </div>
-                      <div class="widget-content-right">
-                        <button class="border-0 btn-transition btn btn-outline-success">
-                          <i class="fa fa-check"></i></button>
-                        <button class="border-0 btn-transition btn btn-outline-danger">
-                          <i class="fa fa-trash"></i>
-
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="todo-indicator bg-success"></div>
-                  <div class="widget-content p-0">
-                    <div class="widget-content-wrapper">
-                      <div class="widget-content-left mr-2">
-                        <div class="custom-checkbox custom-control"><input class="custom-control-input"
-                            id="exampleCustomCheckbox3" type="checkbox"><label class="custom-control-label"
-                            for="exampleCustomCheckbox3">&nbsp;</label></div>
-                      </div>
-                      <div class="widget-content-left flex2">
-                        <div class="widget-heading">Ask for Lunch to Clients</div>
-                        <div class="widget-subheading">By Office Admin</div>
-                      </div>
-
-                      <div class="widget-content-right">
-                        <button class="border-0 btn-transition btn btn-outline-success">
-                          <i class="fa fa-check"></i></button>
-                        <button class="border-0 btn-transition btn btn-outline-danger">
-                          <i class="fa fa-trash"></i>
-
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="list-group-item">
-                  <div class="todo-indicator bg-success"></div>
-                  <div class="widget-content p-0">
-                    <div class="widget-content-wrapper">
-                      <div class="widget-content-left mr-2">
-                        <div class="custom-checkbox custom-control"><input class="custom-control-input"
-                            id="exampleCustomCheckbox10" type="checkbox"><label class="custom-control-label"
-                            for="exampleCustomCheckbox10">&nbsp;</label></div>
-                      </div>
-                      <div class="widget-content-left flex2">
-                        <div class="widget-heading">Client Meeting at 11 AM</div>
-                        <div class="widget-subheading">By CEO</div>
-                      </div>
-
-                      <div class="widget-content-right">
-                        <button class="border-0 btn-transition btn btn-outline-success">
-                          <i class="fa fa-check"></i></button>
-                        <button class="border-0 btn-transition btn btn-outline-danger">
-                          <i class="fa fa-trash"></i>
-
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
+                {{/each}}
               </ul>
             </div>
-
           </div>
         </perfect-scrollbar>
       </div>
-      <div class="d-block text-right card-footer"><button class="mr-2 btn btn-link btn-sm">Cancel</button><button
-          class="btn btn-primary">Add Task</button></div>
+      <div div class="d-block text-right card-footer">
+        <button class="mr-2 btn btn-link btn-sm">Cancel</button>
+        <button class="btn btn-primary">Add Task</button>
+      </div>
     </div>
   </div>
 </div>
+
+<script>
+  function deleteTask(idTask) {
+    const parseCookie = str =>
+      str
+      .split(';')
+      .map(v => v.split('='))
+      .reduce((acc, v) => {
+        acc[decodeURIComponent(v[0].trim())] = decodeURIComponent(v[1].trim());
+        return acc;
+      }, {});
+		let requestOptions = {
+			method: 'DELETE',
+      headers: {
+        "Authorization": parseCookie(document.cookie).Authorization
+      }
+		};
+		let status = 0;
+		fetch("{{API_URL}}" + "/api/tasks?idTask=" + idTask, requestOptions)
+			.then(response => {
+				status = response.status
+				return response.text()
+			})
+			.then(result => {
+				switch (status) {
+					case 200:
+						location.reload()
+						break;
+					default:
+						toastr.error(JSON.parse(result).message)
+						break;
+				}
+			})
+			.catch(error => toastr.error(error));
+	}
+</script>
