--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -18,38 +18,28 @@
                     <div class="widget-content-wrapper">
                       <div class="widget-content-left mr-2">
                         <div class="custom-checkbox custom-control">
-                          <input class="custom-control-input" id="checkbox{{@index}}" onclick="changeCompleted('{{this._id}}',this)" completed="{{this.completed}}" type="checkbox">
+                          <input class="custom-control-input" id="checkbox{{@index}}"
+                            onclick="changeCompleted('{{this._id}}',this)" completed="{{this.completed}}"
+                            type="checkbox">
                           <label class="custom-control-label" for="checkbox{{@index}}">&nbsp;</label>
                         </div>
                       </div>
                       <div class="modal fade" id="Modal{{@index}}" tabindex="-1" role="dialog"
                         aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel">{{this.title}}</h5>
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
+                          <div class="card">
+                            <img class="card-img-top" src="{{this.imageURL}}" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">{{this.title}}</h5>
+                              <p class="card-text">{{this.text}}</p>
                             </div>
-                            <div class="modal-body">
-                              Description:<br>
-                              <div class="card bg-secondary text-white">
-                                <div class="card-body">{{this.text}}</div>
-                              </div> 
-                              <br><br>
-                              {{this.completed}}
-                              Time estimate: {{this.timeEstimate}}
-                              <br>
-                              Start time: {{this.starTime}}
-                              <br>
-                              End time: {{this.endTime}}
-                              <br>
-                              {{!-- <img src="{{this.imageURL}}"> --}}
-                              <img src="https://seeklogo.com/images/T/twitter-icon-square-logo-108D17D373-seeklogo.com.png">
-                              <br> Created at: {{this.createdAt}}
-                            </div>
-                            <div class="modal-footer">
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Time estimate: {{this.timeEstimate}}</li>
+                              <li class="list-group-item">Start time: {{this.starTime}}</li>
+                              <li class="list-group-item">End time: {{this.endTime}}</li>
+                              <li class="list-group-item">Created at: {{this.createdAt}}</li>
+                            </ul>
+                            <div class="card-body">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                               <button type="button" class="btn btn-primary">Save changes</button>
                             </div>
@@ -69,7 +59,8 @@
                           class="border-0 btn-transition btn btn-outline-secondary">
                           <i class="fa-solid fa-arrow-down"></i>
                         </button>
-                        <button class="border-0 btn-transition btn btn-outline-primary" data-toggle="modal" data-target="#Modal{{@index}}">
+                        <button class="border-0 btn-transition btn btn-outline-primary" data-toggle="modal"
+                          data-target="#Modal{{@index}}">
                           <i class="fa-solid fa-ellipsis" style="color: black;"></i>
                         </button>
                         <button id="delete{{@index}}" onclick="deleteTask('{{this._id}}')"
@@ -95,7 +86,9 @@
 </div>
 
 <script>
-  
+  document.querySelectorAll("[completed]").forEach(e => {
+    e.checked = e.getAttribute("completed") == "true"
+  })
 
   function deleteTask(idTask) {
     const parseCookie = str =>
@@ -130,9 +123,8 @@
       })
       .catch(error => toastr.error(error));
   }
-  
+
   function changeCompleted(idTask, checkbox) {
-    console.log(`Cambiando ${idTask} a ${checkbox.checked}`)
     let checked = checkbox.checked;
     const parseCookie = str =>
       str
@@ -159,7 +151,7 @@
         return response.text()
       })
       .then(result => {
-        if(status!=200)toastr.error(JSON.parse(result).message)
+        if (status != 200) toastr.error(JSON.parse(result).message)
       })
       .catch(error => toastr.error(error));
   }
@@ -204,10 +196,6 @@
         }
       })
       .catch(error => toastr.error(error));
-  }
-
-  function showDetails() {
-
   }
 
 </script>
